# chreey-creek

./: .gitignore
api/: app.js  app.js_bak  package-lock.json  package.json
api/config/: database.js
api/models/: Feed.js  index.js
api/public/: index.html
api/routes/: feeds.js  load.js
api/services/: rssService.js
miniCC/: CMakeLists.txt  Makefile  ast.c  ast.h  lempar.c  lexer.c  lexer.h  main.c  parser.c  parser.out  parser.y
mytinyCC/: CMakeLists.txt  main.c  test.txt
mytinyCC/include/: codegen.h  lexer.h  parser.h  utils.h
mytinyCC/src/: codegen.c  lexer.c  main.c  parser.c  utils.c
mytinyCC/tests/: CMakeLists.txt  test_lexer.c
mytinyCC/tests/examples/: factorial.c
new-rss-reader/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
new-rss-reader/app/: page.tsx
new-rss-reader/app/api/analytics/sentiment/: route.ts
new-rss-reader/app/api/analytics/stocks/: route.ts
new-rss-reader/app/api/articles/: route.ts
new-rss-reader/app/api/feeds/: route.ts
new-rss-reader/app/api/feeds/[id]/: route.ts
new-rss-reader/app/api/feeds/[id]/refresh/: route.rs
new-rss-reader/app/api/market/sentiment/: route.ts
new-rss-reader/app/api/refresh/: route.ts
new-rss-reader/app/api/stocks/analysis/[symbol]/: route.ts
new-rss-reader/app/api/stocks/correlation/[symbol]/: route.ts
new-rss-reader/app/api/stocks/prediction/[symbol]/: route.ts
new-rss-reader/components/: analytics-dashboard.tsx  article-grid.tsx  feed-list.tsx  header.tsx  simple-analytics-dashboard.tsx  stock-analysis-dashboard.tsx
new-rss-reader/lib/: database-check.ts  deepseek-service.ts  enhanced-stock-service.ts  openai-service.ts  rss-service.ts  sentiment-service.ts  stock-analysis-service.ts  stock-service.ts
new-rss-reader/prisma/: schema.prisma  seed.ts
new-rss-reader/scripts/: fix-eslink.sh  min_install.sh  setup-database.sh
rss/: app.js  app.js_bak
rss/models/: FeedItem.js
